# find-unnecessary-includes

./: .gitmodules  CMakeLists.txt  Doxyfile  INSTALL.md  README.md
cmake/: configure_files.cmake
patch/clang/: CMakeLists.txt
patch/llvm/: CMakeLists.txt
src/: CMakeLists.txt  TranslationUnitReader.cpp  TranslationUnitReader.h  UnnecessaryIncludeFinder.cpp  UnnecessaryIncludeFinder.h  UnusedHeaderFinder.cpp  UnusedHeaderFinder.h  main.cpp
template/include/: version.h
test/: .gitignore  Base.h  BaseFactory.h  CMakeLists.txt  Derived.h  List.h  class-template-unused.cpp  class-template-unused.cpp-expected  class-template-used.cpp  class-unused.cpp  class-unused.cpp-expected  class-used.cpp  compare_test.cmake  enum-constant-unused.cpp  enum-constant-unused.cpp-expected  enum-constant-used.cpp  enum-optional.cpp  enum-unused.cpp  enum-unused.cpp-expected  enum-used.cpp  forward-decl-data-member.cpp  forward-decl-member-call.cpp  function-unused.cpp  function-unused.cpp-expected  function-used.cpp  macro-unused.c  macro-unused.c-expected  macro-used.c  macro.h  member-function-unused.cpp  member-function-unused.cpp-expected  template-function-unused.cpp  template-function-used.cpp  typedef-unused.cpp  typedef-unused.cpp-expected  typedef-used.cpp  variable-unused.cpp  variable-unused.cpp-expected  variable-used.cpp  variable-used.cpp-expected
